k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onefactor
  labels:
    istio-injection: enabled
