k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rate
  namespace: onefactor
  labels:
    app: rate
    service: rate
spec:
  ports:
  - port: 50001
    name: http
  selector:
    app: rate
