k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rate-gateway
  namespace: onefactor
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rate
  namespace: onefactor
spec:
  hosts:
  - "*"
  gateways:
  - rate-gateway
  http:
  - match:
    - uri:
        prefix: /currency/api/rate
    route:
    - destination:
        host: rate
        port:
          number: 50001
